<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SmsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backItem"
        app:title="@string/contacts"/>

        <TextView
            android:id="@+id/smsNumberTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/sms_shape"/>

        <EditText
            android:id="@+id/smsEditTextET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textSms"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="30dp"
            android:layout_margin="20dp"
            android:background="@drawable/sms_shape" />

        <Button
            android:id="@+id/sendBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/send"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:backgroundTint="@color/backItem"/>

</LinearLayout>